# OneClickRGB

./: .gitignore  AUTHORS.md  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  DEVICE_DETECTION_STRATEGY.md  GITHUB_COMPLETE_SETUP_SUMMARY.md  GITHUB_PUSH_NOW.md  GITHUB_README_IMAGES_GUIDE.md  GITHUB_REPOSITORY_SETUP.md  GITHUB_SETUP_QUICKSTART.md  IMPLEMENTATION_STEPS.md  LICENSE  MODULAR_ARCHITECTURE_DESIGN.md  MODULE_IMPLEMENTATION_GUIDE.md  MODULE_SYSTEM_EXECUTIVE_SUMMARY.md  PROJECT_STRUCTURE_PLAN.md  QT_LICENSING_CLARIFICATION.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  build_native.bat  dryrun.bat
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  device_support.yml  feature_request.yml
.github/workflows/: build.yml  release.yml  security.yml  tests.yml
config/: controller_database.json  devices.json
debug/: debug_asus.cpp  debug_asus2.cpp  debug_hid.cpp  debug_protocols.cpp  debug_steelseries.cpp  test_standalone.cpp
docs/: GSkill_Trident_Z5_RGB_DDR5_Protocol.md  GUIDE.md  INDEX.md  SMBus_Implementation_Guide.md
docs/screenshots/: capture_window.ps1
installer/: OneClickRGB.iss
legacy/: compile_debug_evision.py  compile_debug_steelseries.py  compile_deepscan.bat  compile_detect_asus.bat  compile_detect_asus.py  compile_edge3.bat  compile_edge_final.bat  compile_ene_debug.bat  compile_evision_debug.bat  compile_evision_edge.bat  compile_evision_edge2.bat  compile_evision_fullscan.bat  compile_evision_unlock.bat  compile_gpu_probe.bat  compile_gui.py  compile_lock_test.bat  compile_new.py  compile_smbus_scan.bat  compile_smbus_test.py  compile_unified.bat  output.txt  run_asus_detect.cmd  scan_devices.ps1  scan_devices2.ps1
portable/: README.txt  install.bat  install_manual.bat  uninstall.bat
production/: build.bat  compile.py  compile_gui.py  compile_oneclick.py
resources/: resources.qrc
scripts/: build.bat
src/: OneClickRGB.manifest  OneClickRGB.rc  analyze_asus_config.cpp  aura_all_channels.cpp  aura_control.cpp  aura_control_stable.cpp  channel_config.h  channel_settings_dialog.cpp  debug_evision.cpp  debug_evision_v2.cpp  debug_ram_detailed.cpp  debug_ram_fix.cpp  debug_smbus_scan.cpp  debug_steelseries.cpp  detect_asus_channels.cpp  detect_asus_v2.cpp  detect_asus_v3.cpp  ene_debug.cpp  evision_debug.cpp  evision_deepscan.cpp  evision_direct.cpp  evision_edge.cpp  evision_edge2.cpp  evision_edge3.cpp  evision_edge_bgr.cpp  evision_edge_breathing.cpp  evision_edge_combined.cpp  evision_edge_custom.cpp  evision_edge_direct.cpp  evision_edge_direct_dynamic.cpp  evision_edge_final.cpp  evision_edge_onoff.cpp  evision_edge_refresh.cpp  evision_edge_simulate_fnf12.cpp  evision_edge_test.cpp  evision_edge_test_024.cpp  evision_edge_working.cpp  evision_edge_zone.cpp  evision_feature.cpp  evision_fullscan.cpp  (+29 more)
src/controllers/: AsusAuraMainboardController.cpp  AsusAuraMainboardController.h  AsusAuraUSBController.cpp  AsusAuraUSBController.h  EVisionKeyboardController.cpp  EVisionKeyboardController.h  GSkillTridentZ5Controller.cpp  GSkillTridentZ5Controller.h  SteelSeriesRival600Controller.cpp  SteelSeriesRival600Controller.h  SteelSeriesRivalController.cpp  SteelSeriesRivalController.h
src/core/: AutoStart.cpp  AutoStart.h  ConfigManager.cpp  ConfigManager.h  ControllerFactory.cpp  ControllerFactory.h  DeviceDatabase.cpp  DeviceDatabase.h  DeviceManager.cpp  DeviceManager.h  DeviceRegistry.cpp  DeviceRegistry.h  IRGBController.cpp  IRGBController.h  OneClickRGB.cpp  OneClickRGB.h  ProfileManager.cpp  ProfileManager.h
src/core/modules/: IModule.h  ModuleManager.cpp  ModuleManager.h
src/devices/: HIDController.cpp  HIDController.h  RGBDevice.cpp  RGBDevice.h
src/modules/: AsusAuraModule.cpp  SteelSeriesModule.cpp
src/scanner/: HardwareScanner.cpp  HardwareScanner.h
src/smbus/: SMBusInterface.h  SMBusWindows.cpp  SMBusWindows.h
src/ui/: DeviceCard.cpp  DeviceCard.h  MainWindow.cpp  MainWindow.h  QuickActions.cpp  QuickActions.h  SettingsDialog.cpp  SettingsDialog.h
tests/: run_tests.bat  test_integration.cpp  test_suite.cpp
